--- a/Web/src/app/admin/product/product.component.html
+++ b/Web/src/app/admin/product/product.component.html
@@ -63,10 +63,17 @@
       </select>
       </div>
       <div class="form-group">
-        <label for="price">Price</label>
+        <label for="price">Unit Price (Rs)</label>
         <div class="input-group">
           <input type="text" id="price" class="form-control" style="text-align: left" placeholder="price" name="price" 
-          [(ngModel)]="price" (keyup)="validateNumbers()">
+          [(ngModel)]="price" (keyup)="validatePrice()">
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="price">Weight (grams)</label>
+        <div class="input-group">
+          <input type="text" id="weight" class="form-control" style="text-align: left" placeholder="weight" name="weight" 
+          [(ngModel)]="weight" (keyup)="validateWeight()">
         </div>
       </div>
       <div class="form-group">
