--- a/Web/src/app/admin/category/category.component.html
+++ b/Web/src/app/admin/category/category.component.html
@@ -59,7 +59,7 @@
         <div class="input-group">
           <input type="file" id="fileToUpload" class="form-control" style="text-align: left" placeholder="fileToUpload" name="fileToUpload"
           [(ngModel)]="fileToUpload" autocomplete="off" (change)="FileUpload($event)">
-          <img [src]="image" style="width:inherit; height: inherit;align-content: center;" [hidden]="!showImage">
+          <img [src]="icon" style="width:inherit; height: inherit;align-content: center;" [hidden]="!showImage">
         </div>
       </div>
       <div class="form-group">
