--- a/Web/src/app/products/products.component.html
+++ b/Web/src/app/products/products.component.html
@@ -1,46 +1,65 @@
 <app-header></app-header>
 <div class="row products-page">
 </div>
-<div class="row" style="background-color: white">
-<div class="col-1"></div>
-<div class="col-10">
-<section class="section-custom">
-    <div>
-        <h1 data-aos="zoom-in" data-aos-duration="2000" style="text-align: center">Products</h1>
-        <hr data-aos="zoom-in" data-aos-duration="2000">
-        <div class="row justify-content-center">
-            <div class="col-md-2 col-sm-12 divcard m-4 justify-content-center" data-aos="flip-left" data-aos-duration="2000" 
-            *ngFor="let item of productlist | paginate: { itemsPerPage: 10, currentPage: pproducts }; let i = index">
-            <img class="d-block w-100 mb-5" [src]="item.Image">
-            <h5 style="text-align: left;color: #c79416">Product Name</h5>
-            <p style="text-align: left;color: black"><b>{{item.Title}}</b></p>
-            <h5 style="text-align: left;color: black">Price</h5>
-            <p style="text-align: left;color: #52b788"><b>Rs {{item.Price| number:'.2-2'}}</b></p>
-            <button class="btnsubmit2 float-left" 
-            style="vertical-align:middle;" (click)="addToCartBtnClick(item)" [hidden]="item.IsAddedToCart">
-                <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
-                <span>Add to cart </span>
-            </button>
-            <button class="btnsubmit3 float-left" 
-            style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)" [hidden]="!item.IsAddedToCart">
-                <i class="far fa-times-circle mr-2" aria-hidden="true"></i>
-                <span>Remove </span>
-            </button>
-            <button class="btnsubmitfavourite float-right" 
-            style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)">
-                <i class="fas fa-heart" aria-hidden="true"></i>
-            </button>
+<div class="row justify-content-center" style="background-color: white">
+    <p style="padding-left: 70px;padding-top: 30px;">Home / Products</p>
+    <div class="col-md-2 col-sm-12" style="padding-top: 20px;padding-left: 0px;">
+        <div class="divcardcategorieslist" >
+            <div class="row p-0 justify-content-center" style="color: #fcfcfc;background-color: #142a52">
+                <h3 class="p-2" style="text-align: center;">CATEGORIES</h3>
             </div>
-        </div> 
-        <div class="row mt-5 justify-content-center" [hidden]="showproducts">
-            <div class="col-md-4 div3 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
-                <h2 style="margin-top: 5%;text-align: center;word-wrap:break-word;">Currently there are no Products</h2>
+            <div class="input-group">
+                <input type="radio" class="mt-4" (click)="GetProducts(0)" value="all" [(ngModel)]="category" name="category">
+                <label for="delivery" class="mt-4">All <span style="color: #e78e08;font-weight: lighter">({{allProductsCount}})</span></label><br>
+            </div>
+            <div class="input-group" *ngFor="let item of categorylist">
+                <input type="radio" class="mb-2 mt-2" (click)="GetProductsByCategory(item)" value="{{item.Id}}"
+                 [(ngModel)]="category" name="category">
+                <label for="delivery" class="mb-2 mt-2">{{item.Title}} 
+                    <span style="color: #e78e08;font-weight: lighter">({{item.ProductCount}})</span>
+                </label><br>
             </div>
         </div>
-        <pagination-controls (pageChange)="pagination($event)" class="float-right"></pagination-controls>
     </div>
-</section>
-</div>
+    <div class="col-8">
+    <section class="section-custom">
+        <div>
+            <h1 data-aos="zoom-in" data-aos-duration="2000" style="text-align: left;font-weight: bold;padding-left: 25px">{{selectedCattitle}}</h1>
+            <p style="text-align: left;padding-left: 25px;color: #e78e08">
+                ({{selectedProductCount}} products found)</p>
+            <div class="row justify-content-center">
+                <div class="col-md-2 col-sm-12 divcard m-4 justify-content-center" data-aos="flip-left" data-aos-duration="2000" 
+                *ngFor="let item of productlist | paginate: { itemsPerPage: 10, currentPage: pproducts }; let i = index">
+                    <img class="d-block w-100 mb-5" [src]="item.Image">
+                    <h5 style="text-align: left;color: #c79416">Product Name</h5>
+                    <p style="text-align: left;color: black"><b>{{item.Title}}</b></p>
+                    <h5 style="text-align: left;color: black">Price</h5>
+                    <p style="text-align: left;color: #52b788"><b>Rs {{item.Price| number:'.2-2'}}</b></p>
+                    <button class="btnsubmit2 float-left" 
+                    style="vertical-align:middle;" (click)="addToCartBtnClick(item)" [hidden]="item.IsAddedToCart">
+                        <i class="fa fa-shopping-cart mr-2" aria-hidden="true"></i>
+                        <span>Add to cart </span>
+                    </button>
+                    <button class="btnsubmit3 float-left" 
+                    style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)" [hidden]="!item.IsAddedToCart">
+                        <i class="far fa-times-circle mr-2" aria-hidden="true"></i>
+                        <span>Remove </span>
+                    </button>
+                    <button class="btnsubmitfavourite float-right" 
+                    style="vertical-align:middle;" (click)="removeFromCartBtnClick(item)">
+                        <i class="fas fa-heart" aria-hidden="true"></i>
+                    </button>
+                </div>
+            </div> 
+            <div class="row mt-5 justify-content-center" [hidden]="showproducts">
+                <div class="col-md-4 div3 col-sm-12" data-aos="zoom-out-up" data-aos-duration="3000">
+                    <h2 style="margin-top: 5%;text-align: center;word-wrap:break-word;">Currently there are no Products</h2>
+                </div>
+            </div>
+            <pagination-controls (pageChange)="pagination($event)" class="float-right"></pagination-controls>
+        </div>
+    </section>
+    </div>
 </div>
 <footer>
     <div class="row justify-content-center mb-5">
