--- a/Web/src/app/admin/order/order.component.html
+++ b/Web/src/app/admin/order/order.component.html
@@ -5,7 +5,7 @@
       <h1 data-aos="zoom-in" data-aos-duration="2000" style="text-align: left;">Order</h1>
       
       <!-- orders -->
-      <table class="table">
+      <!-- <table class="table">
         <thead>
         <tr>
           <th scope="col">Name</th>
@@ -27,6 +27,6 @@
         </tr>
         </tbody>
       </table>
-      <pagination-controls (pageChange)="porders = $event" class="float-right"></pagination-controls>
+      <pagination-controls (pageChange)="porders = $event" class="float-right"></pagination-controls> -->
     </div>
 </div>
