--- a/Web/src/app/header/header.component.html
+++ b/Web/src/app/header/header.component.html
@@ -41,7 +41,7 @@
             </ul>
         </div> 
     </div>
-    <div class="float-left left-bar">
+    <!-- <div class="float-left left-bar">
         <div>
             <ul class="list-inline">
                 <li id="memberLinkPanRegister">
@@ -52,7 +52,7 @@
                 </li>
             </ul>
         </div> 
-    </div>
+    </div> -->
     <div class="right_bar">
         <div class="navbar-address2">
             <ul class="list-inline navbar_address-tab">
