--- a/Web/src/app/profile/profile.component.html
+++ b/Web/src/app/profile/profile.component.html
@@ -69,6 +69,7 @@
                         <div class="col-md-1"></div>
                         <div class="col-md-10">
                             <h1 class="col-form-label ml-0 pt-3" style="color: black;">Risk Factors</h1>
+                            <p><span style="color: red;">* </span>Disclaimer: Please be aware that the analysis we provide is based on predictive models. These models may have some variability.</p>
                         </div>
                     </div>
                     <div class="form-group row">
