--- a/Web/src/styles.scss
+++ b/Web/src/styles.scss
@@ -80,6 +80,9 @@ html {
 	color: rgb(66, 133, 244);
   }
 
+  .custom-h2 {
+	font-size: 20px !important;
+  }
 
   .custom-label {
 	font-size: 14px !important;
